# vibe-index

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  demo-output.txt  mcp_server.py  opencode.jsonc  paper.md  run_benchmark.ps1  run_benchmark.sh  vibe-mcp-wrapper.bat
.github/workflows/: ci.yml  lint.yml
benches/: benchmark.rs  file_index_benchmark.rs  rag_comparison.rs
docs/: demo.html  index.html
examples/: real_code_benchmark.rs  real_codebase_search.rs
mcp-protocol-local/: Cargo.toml  README.md
mcp-protocol-local/src/: constants.rs  lib.rs  version.rs
mcp-protocol-local/src/messages/: base.rs  completion.rs  lifecycle.rs  mod.rs
mcp-protocol-local/src/types/: client.rs  mod.rs  prompt.rs  server.rs  tool.rs
mcp-protocol-local/src/types/completion/: mod.rs
mcp-protocol-local/src/types/resource/: mod.rs
mcp-protocol-local/src/types/sampling/: mod.rs
src/: bm25.rs  file_index.rs  hot_cold.rs  hybrid_search.rs  lib.rs  llama_cpp.rs  main.rs  mcp_main.rs  mcp_server.rs  persistent_storage.rs  prompt_injector.rs  query_parser.rs  simd_search.rs  vllm.rs
tests/: llama_cpp_integration.rs  real_codebase.rs
