[package]
name = "vibe-index"
version = "0.1.0"
edition = "2021"
description = "Bit-level positional phrase matching for ultra-low-latency LLM context retrieval"
license = "MIT"

[dependencies]
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1.0"
base64 = "0.22"

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "rag_comparison"
harness = true

[[example]]
name = "real_code_benchmark"
path = "examples/real_code_benchmark.rs"
