[package]
name = "vibe-index"
version = "0.1.0"
edition = "2021"
description = "Sub-microsecond exact phrase matching for LLM context retrieval using Roaring bitmaps"
license = "MIT"
repository = "https://github.com/mladenpop-oss/vibe-index"
readme = "README.md"
keywords = ["llm", "rag", "phrase-search", "roaring-bitmap", "context-retrieval"]
categories = ["algorithms", "data-structures", "command-line-utilities"]

[dependencies]
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1.0"
base64 = "0.22"
bincode = "1.3"
walkdir = "2.5.0"
modelcontextprotocol-server = { path = "rust-mcp-fix/mcp-server" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
chrono = "0.4"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "file_index_benchmark"
harness = false

[[bench]]
name = "rag_comparison"
harness = true

[[example]]
name = "real_code_benchmark"
path = "examples/real_code_benchmark.rs"

[[bin]]
name = "vibe-mcp"
path = "src/mcp_main.rs"
