[package]
name = "vibe-index"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Sub-microsecond exact phrase matching for LLM context retrieval using Roaring bitmaps"
license = "MIT"
repository = "https://github.com/mladenpop-oss/vibe-index"
readme = "README.md"
keywords = ["llm", "rag", "phrase-search", "roaring-bitmap", "context-retrieval"]
categories = ["algorithms", "data-structures", "command-line-utilities"]

[dependencies]
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
flate2 = "1.0"
base64 = "0.22"
bincode = "1.3"
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
llama-cpp = ["reqwest"]
vllm = ["reqwest"]
all = ["llama-cpp", "vllm"]

[dev-dependencies]
chrono = "0.4"
criterion = "0.5"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "file_index_benchmark"
harness = false

[[bench]]
name = "rag_comparison"
harness = true

[[example]]
name = "real_code_benchmark"
path = "examples/real_code_benchmark.rs"
