[package]
name = "mcp-protocol"
version = "0.2.7"
edition = "2021"
description = "Protocol definitions for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/colinrozzi/rust-mcp"

[features]
camel_case = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
